--- a/QuickNote/QuickNote.csproj
+++ b/QuickNote/QuickNote.csproj
@@ -53,6 +53,7 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Drawing.cs" />
     <Compile Include="RTBExtensions.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Form1.cs">
